# mac86

./: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md  ROADMAP.md  SUMMARY.md  build.sh
.github/workflows/: ci.yml
compile/: build.sh  hello
root/compile/: build.sh  cf_test  cf_test.c
root/sbin/: SystemStarter  autodiskmount  clri  disklabel  dmesg  dump  dumpfs  dynamic_pager  fibreconfig  fsck  fsck_hfs  fsck_msdos  fsck_udf  fstyp  fstyp_hfs  fstyp_msdos  fstyp_ntfs  fstyp_udf  fstyp_ufs  ifconfig  ip6fw  ipfw  kerberosautoconfig  kextload  kextunload  launchd  md5  mknod  mount  mount_afp  mount_cd9660  mount_cddafs  mount_devfs  mount_fdesc  mount_ftp  mount_hfs  mount_msdos  mount_nfs  mount_ntfs  mount_smbfs  (+19 more)
samples/: build_freestanding.sh  crt0.s  hello  hello.s  hello_dynamic  phase1_hello  phase1_hello_static  phase1_main.c  phase2  phase2_main.c  syscall.h
src/: binary_loader.rs  cpu.rs  dyld.rs  emulator.rs  errors.rs  filesystem.rs  lib.rs  libsystem.rs  main.rs  memory.rs  process.rs  syscall.rs  threads.rs
src/libsystem/: CoreFoundation.rs  cf_handle_table.rs  dispatch.rs  fts.rs  host_handle_table.rs  math.rs  mem.rs  mod.rs  printf.rs  symbols.rs  trampoline.rs
tests/: cf_integration.rs  common.h  core_io_fs.rs  emulator_bins.rs  golden.rs  pthread_tls.rs  text_math.rs
tests/cf_integration/: build.sh  cf_test.c  cf_test_arm64  cf_test_i386  cf_time.c  cf_time_arm64  cf_time_i386
tests/core_io_fs/: build.sh  core_io_fs.c  core_io_fs_arm64  core_io_fs_i386
tests/hello_world/: build.sh
(+184 files in other folders)
