[package]
name = "mac86"
version = "0.1.0"
edition = "2021"

[dependencies]
# Emulation and execution
unicorn = "0.3"  # CPU emulation engine
goblin = "0.8"   # Binary parsing (for Mach-O support)

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"

# System integration
libc = "0.2"
nix = { version = "0.29", features = ["process", "mman", "fs", "signal"] }

# Threading and concurrency
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"

# Utilities
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
tempfile = "3.0"
regex = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
